[package]
name = "halo2_base_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1"
num-traits = "0.2"
ff = "0.12.0"

# halo2
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2022_09_10" }
halo2_base = { git = "https://github.com/axiom-crypto/halo2-base.git" }
